# tree-sitter-surrealdb

./: .gitignore  Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  parser.exp  parser.lib
examples/: begin.surql  cancel.surql  castings.surql  comments.surql  commit.surql  constants.surql  create.surql  database.surql  define-event.surql  define-function.surql  define-login.surql  define-token.surql  delete.surql  durations.surql  functions.surql  futures.surql  if-else.surql  info.surql  insert.surql  namespace.surql  nothings.surql  numbers.surql  operators.surql  properties.surql  records.surql  relate.surql  select.surql  sleep.surql  types.surql  update.surql  use.surql  variables.surql
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/define/: database.txt  event.txt  function.txt  login.txt  namespace.txt  table.txt  token.txt
